--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.7.1",
     "swiper": "^11.2.10",
     "yup": "^1.7.0"
