--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "formik": "^2.4.6",
+    "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-quill-new": "^3.6.0",
     "react-router-dom": "^7.7.1",
     "swiper": "^11.2.10",
